# zfec

./: .appveyor.yml  .gitattributes  .gitignore  .travis.yml  ChangeLog.md  HOWTO-release  MANIFEST.in  NEWS.txt  README.rst  changelog  copyright  fec.cabal  flake.nix  requirements.txt  setup.cfg  setup.cfg.old  setup.py  setup.py.old  stack.yaml  stridetune-bench.ba.sh  stridetune-dat.bash  tox.ini
.circleci/: config.yml  lib.sh
.github/workflows/: build.yml  test-qemu.yml  test.yml  tests.yml
bench/: bench_zfec.py
benchmark-zfec/: Main.hs
haskell/Codec/: FEC.hs
haskell/test/: FECTest.hs
misc/: show-tool-versions.py
misc/build_helpers/: show-tool-versions.py
pyfec/fec/: _fecmodule.c  fecmodule.c
zfec/: MANIFEST.in  Makefile  NEWS.txt  README.rst  README.txt  TODO  __init__.py  _fecmodule.c  _version.py  changelog  cmdline_zfec.py  cmdline_zunfec.py  copyright  easyfec.py  ez_setup.py  fec.c  fec.cabal  fec.h  filefec.py  setup.cfg  setup.py  stridetune-bench.py  stridetune-graph.py  tables.c  write.c
zfec.egg-info/: stdeb.cfg
zfec/bench/: bench_zfec.py
zfec/haskell/: FECTest.hs
zfec/haskell/Codec/: FEC.hs
zfec/test/: test_zfec.py
zfec/zfec/: __init__.py  _fecmodule.c  cmdline_zfec.py  cmdline_zunfec.py  easyfec.py  fec.c  fec.h  filefec.py
zfec/zfec/test/: test_util.py  test_zfec.py
zfec/zfec/util/: mathutil.py  version_class.py
