[metadata]
name = zfec
summary = efficient, portable erasure coding tool
description-file =
  README.rst
author = Zooko O\'Whielacronx
author-email = zooko@zooko.com
home-page = https://tahoe-lafs.org/trac/zfec
license = GPL-2+
classifier =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  License :: OSI Approved
  License :: OSI Approved :: GNU General Public License v2 or later (GPL-2+)
  License :: DFSG Approved
  License :: Other/Proprietary License
  Intended Audience :: Developers
  Intended Audience :: End User/Desktop
  Intended Audience :: System Administrators
  Operating System :: Microsoft
  Operating System :: Microsoft :: Windows
  Operating System :: Unix
  Operating System :: POSIX :: Linux
  Operating System :: POSIX
  Operating System :: MacOS :: MacOS X
  Operating System :: Microsoft :: Windows :: Windows NT/2000
  Operating System :: OS Independent
  Natural Language :: English
  Programming Language :: C
  Programming Language :: Python
  Programming Language :: Python :: 2
  Programming Language :: Python :: 2.6
  Programming Language :: Python :: 2.7
  Topic :: Utilities
  Topic :: System :: System Administration
  Topic :: System :: Filesystems
  Topic :: System :: Distributed Computing
  Topic :: Software Development :: Libraries
  Topic :: Communications :: Usenet News
  Topic :: System :: Archiving :: Backup
  Topic :: System :: Archiving :: Mirroring
  Topic :: System :: Archiving

[files]
packages =
  zfec
  data_files =
    share/doc/zfec =
      COPYING.GPL
      COPYING.TGPPL.rst
      TODO
      README.rst

[entry_points]
console_scripts =
  zfec = zfec.cmdline_zfec:main
  zunfec = zfec.cmd_zunfec:main

[versioneer]
VCS = git
style = pep440
versionfile_source = zfec/_version.py
versionfile_build = zfec/_version.py
tag_prefix = zfec-
parentdir_prefix = zfec-