[metadata]
summary = efficient, portable erasure coding tool
description_file =
  README.rst
long_description_content_type = text/x-rst
author = Zooko O\'Whielacronx
author_email = zooko@zooko.com
home_page = https://tahoe-lafs.org/trac/zfec
license = GPL-2+
python_requires =
  >=3.8, <3.13
classifier =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  License :: OSI Approved
  License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
  License :: DFSG approved
  License :: Other/Proprietary License
  Intended Audience :: Developers
  Intended Audience :: End Users/Desktop
  Intended Audience :: System Administrators
  Operating System :: Microsoft
  Operating System :: Microsoft :: Windows
  Operating System :: Unix
  Operating System :: POSIX :: Linux
  Operating System :: POSIX
  Operating System :: MacOS :: MacOS X
  Operating System :: Microsoft :: Windows :: Windows NT/2000
  Operating System :: OS Independent
  Natural Language :: English
  Programming Language :: C
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Utilities
  Topic :: System :: Systems Administration
  Topic :: System :: Filesystems
  Topic :: System :: Distributed Computing
  Topic :: Software Development :: Libraries
  Topic :: Communications :: Usenet News
  Topic :: System :: Archiving :: Backup
  Topic :: System :: Archiving :: Mirroring
  Topic :: System :: Archiving

[options]
packages = find:
include_package_data = True

[options.entry_points]
console_scripts =
  zfec = zfec.cmdline_zfec:main
  zunfec = zfec.cmdline_zunfec:main

[versioneer]
VCS = git
style = pep440-pre
versionfile_source = zfec/_version.py
versionfile_build = zfec/_version.py
tag_prefix = zfec-
parentdir_prefix = zfec-
