name:            fec
version:         0.1.1
license:         GPL
license-file:    README.rst
author:          Adam Langley <agl@imperialviolet.org>
maintainer:      Adam Langley <agl@imperialviolet.org>
description:     This code, based on zfec by Zooko, based on code by Luigi
		 Rizzo implements an erasure code, or forward error
		 correction code. The most widely known example of an erasure
		 code is the RAID-5 algorithm which makes it so that in the
		 event of the loss of any one hard drive, the stored data can
		 be completely recovered.  The algorithm in the zfec package
		 has a similar effect, but instead of recovering from the loss
		 of only a single element, it can be parameterized to choose in
		 advance the number of elements whose loss it can tolerate.
build-type:      Simple
homepage:        http://allmydata.org/source/zfec
synopsis:        Forward error correction of ByteStrings
category:        Codec
build-depends:   base, bytestring>=0.9
stability:       provisional
tested-with:     GHC == 6.8.2
exposed-modules: Codec.FEC
extensions:      ForeignFunctionInterface
hs-source-dirs:  haskell
ghc-options:     -Wall
c-sources:       zfec/fec.c
cc-options:      -std=c99
include-dirs:    zfec
extra-source-files: zfec/fec.h, COPYING.GPL, COPYING.TGPPL.html
